# pimm

./: .gitignore  PLAN.md  pimm.md  pyproject.toml  spec.md  web-dashboard.md
configs/: cn_universe.csv  config.cfg  config.py  config.toml  hk.toml  hk_universe.csv  simulator.toml  tw_universe.csv
pimm/: config.py  main.py  simulator.py  types.py
pimm/engine/: dispatcher.py  loop.py  refill.py  sizing.py  state.py
pimm/feeds/: alpha.py  base.py  fills.py  heartbeat.py  inventory.py  live_price.py  risk_appetite.py
pimm/gui/: dashboard.py  process.py  widgets.py
pimm/utils/: lots.py  network.py  quotetypes.py  time.py
pimm/web/: server.py
pimm/web/static/: index.html
test/: conftest.py  test_config.py  test_feeds.py  test_fills.py  test_pnl.py  test_refill.py  test_session.py  test_sizing.py
