[project]
name = "pimm"
version = "0.4.0"
description = "Python Intelligent Market Maker — dark pool market-making engine"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
pimm = "pimm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pimm", "configs"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["UP031", "UP032", "I001"]  # allow % formatting, compact imports

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
known-first-party = ["pimm", "configs"]
split-on-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["test"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
